Testing for variable on cloud